; ModuleID = '/home/carl/AnghaBench/sqlcipher/ext/fts2/extr_fts2.c_loadSegmentLeaves.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/ext/fts2/extr_fts2.c_loadSegmentLeaves.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SQLITE_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i64, i64, i8*, i32, i32, i32*)* @loadSegmentLeaves to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @loadSegmentLeaves(i32* %0, i64 %1, i64 %2, i8* %3, i32 %4, i32 %5, i32* %6) #0 {
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  %12 = alloca i8*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32*, align 8
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  store i32* %0, i32** %9, align 8
  store i64 %1, i64* %10, align 8
  store i64 %2, i64* %11, align 8
  store i8* %3, i8** %12, align 8
  store i32 %4, i32* %13, align 4
  store i32 %5, i32* %14, align 4
  store i32* %6, i32** %15, align 8
  %18 = load i64, i64* %10, align 8
  %19 = load i64, i64* %11, align 8
  %20 = icmp sle i64 %18, %19
  %21 = zext i1 %20 to i32
  %22 = call i32 @assert(i32 %21)
  %23 = load i32*, i32** %9, align 8
  %24 = load i64, i64* %10, align 8
  %25 = load i64, i64* %11, align 8
  %26 = call i32 @leavesReaderInit(i32* %23, i32 0, i64 %24, i64 %25, i32* null, i32 0, i32* %17)
  store i32 %26, i32* %16, align 4
  %27 = load i32, i32* %16, align 4
  %28 = load i32, i32* @SQLITE_OK, align 4
  %29 = icmp ne i32 %27, %28
  br i1 %29, label %30, label %32

30:                                               ; preds = %7
  %31 = load i32, i32* %16, align 4
  store i32 %31, i32* %8, align 4
  br label %42

32:                                               ; preds = %7
  %33 = load i32*, i32** %9, align 8
  %34 = load i8*, i8** %12, align 8
  %35 = load i32, i32* %13, align 4
  %36 = load i32, i32* %14, align 4
  %37 = load i32*, i32** %15, align 8
  %38 = call i32 @loadSegmentLeavesInt(i32* %33, i32* %17, i8* %34, i32 %35, i32 %36, i32* %37)
  store i32 %38, i32* %16, align 4
  %39 = call i32 @leavesReaderReset(i32* %17)
  %40 = call i32 @leavesReaderDestroy(i32* %17)
  %41 = load i32, i32* %16, align 4
  store i32 %41, i32* %8, align 4
  br label %42

42:                                               ; preds = %32, %30
  %43 = load i32, i32* %8, align 4
  ret i32 %43
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @leavesReaderInit(i32*, i32, i64, i64, i32*, i32, i32*) #1

declare dso_local i32 @loadSegmentLeavesInt(i32*, i32*, i8*, i32, i32, i32*) #1

declare dso_local i32 @leavesReaderReset(i32*) #1

declare dso_local i32 @leavesReaderDestroy(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
